--- a/Async-Await/index.html
+++ b/Async-Await/index.html
@@ -7,9 +7,13 @@
     <title>Practice set</title>
   </head>
   <body>
-    <h2 id="output-box"></h2>
+    <!-- For Async JS Practice set1 -->
+    <!-- <h2 id="output-box"></h2>
     <ul id="showList"></ul>
-    <div id="app"></div>
+    <div id="app"></div> -->
+
+    <!-- For Async JS Practice set2 -->
+    
     <script src="index.js"></script>
   </body>
 </html>
