--- a/Async-Await/index.html
+++ b/Async-Await/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice set</title>
+    <style>
+      *{
+        background-color: #060633;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <!-- For Async JS Practice set1 -->
@@ -13,7 +19,7 @@
     <div id="app"></div> -->
 
     <!-- For Async JS Practice set2 -->
-    
+    <div id="outputBox"></div>
     <script src="index.js"></script>
   </body>
 </html>
